fixing settings alignment

--- a/client/src/components/ClientDashboard/Styles/RoadmapElements.scss
+++ b/client/src/components/ClientDashboard/Styles/RoadmapElements.scss
@@ -305,7 +305,7 @@ img.settingsIcon {
   background-color: transparent;
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.5);
   z-index: 2!important;
-  right: 26px!important;
+  right: 30px!important;
   bottom: 105px!important;
   cursor: pointer!important;
   position: fixed!important;
@@ -460,7 +460,7 @@ img.settingsIcon {
   img.settingsIcon {
     width: 33px;
     height: 33px;
-    right: 20px!important;
+    right: 22px!important;
     bottom: 76px!important;
   }
 }
